unpackaged/main/default/objects/Asset/fields/buildingNumber__c.field-meta.xml
<CustomField>
    <fullName>buildingNumber__c</fullName>
    <label>Номер корпуса</label>
    <length>255</length>
    <type>Text</type>
</CustomField>