unpackaged/main/default/objects/Asset/fields/level__c.field-meta.xml
<CustomField>
    <fullName>level__c</fullName>
    <label>Этаж</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>