unpackaged/main/default/objects/Asset/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Проект (Сделка)</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Оборудование на объекте</relationshipLabel>
    <relationshipName>activeOpp</relationshipName>
    <type>Lookup</type>
</CustomField>