unpackaged/main/default/objects/Asset/fields/roomNumber__c.field-meta.xml
<CustomField>
    <fullName>roomNumber__c</fullName>
    <label>Номер комнаты</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>