unpackaged/main/default/objects/Asset/fields/ServiceFreq__c.field-meta.xml
<CustomField>
    <fullName>ServiceFreq__c</fullName>
    <label>Периодичность обслуживания (дни)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>90</fullName>
            </value>
            <value>
                <fullName>180</fullName>
            </value>
            <value>
                <fullName>365</fullName>
                <default>true</default>
                <label>365</label>
            </value>
            <value>
                <fullName>1825</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>