unpackaged/main/default/objects/Asset/fields/UserTION__c.field-meta.xml
<CustomField>
    <fullName>UserTION__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Сотрудник ответственный за Оборудование</label>
    <referenceTo>User__c</referenceTo>
    <relationshipLabel>Активы</relationshipLabel>
    <relationshipName>mDWc</relationshipName>
    <type>Lookup</type>
</CustomField>